Thu Sep 29 17:25:39 2005  Simon McQueen  <sm@prismtech.com>

        * orbsvcs/tests/Bug_2247_Regression/test_i.cpp:
        * orbsvcs/tests/Bug_2247_Regression/test_i.h:

          Fixing the inevitable emulated exception errors.

Thu Sep 29 10:02:19 2005  Chris Cleeland  <cleeland_c@ociweb.com>

        * orbsvcs/orbsvcs/Event/EC_TPC_ProxyConsumer.cpp:
        * orbsvcs/orbsvcs/Event/EC_TPC_ProxySupplier.cpp:

	  De-fuzzed ACE_CHECK/ACE_TRY_CHECK warnings.  Thanks to Johnny
	  Willemsen for catching this and holding my feet to the fire.

Thu Sep 29 09:12:24 2005  Chad Elliott  <elliott_c@ociweb.com>

        * tao/SmartProxies/Smart_Proxies.h:

          Removed the virtual from the inheritance list.  It is not
          necessary.

Thu Sep 29 14:29:17 2005  Simon McQueen  <sm@prismtech.com>

        * orbsvcs/tests/Bug_2247_Regression/Bug_2247_Regression.mpc:
        * orbsvcs/tests/Bug_2247_Regression/Client_i.h:
        * orbsvcs/tests/Bug_2247_Regression/Manager.cpp:
        * orbsvcs/tests/Bug_2247_Regression/Manager.h:
        * orbsvcs/tests/Bug_2247_Regression/README:
        * orbsvcs/tests/Bug_2247_Regression/run_test.pl:
        * orbsvcs/tests/Bug_2247_Regression/server.cpp:
        * orbsvcs/tests/Bug_2247_Regression/test.idl:
        * orbsvcs/tests/Bug_2247_Regression/test_i.cpp:
        * orbsvcs/tests/Bug_2247_Regression/test_i.h:

          Regression test added.

Thu Sep 29 07:38:32 2005  Chad Elliott  <elliott_c@ociweb.com>

        * tests/Smart_Proxies/dtor/client.cpp:
        * tests/Smart_Proxies/dtor/server.cpp:

          Corrected build issues (include files, exception macros and
          minimum corba related problems) and warnings from certain versions
          of the GNU compiler about implicit conversion.

Thu Sep 29 12:34:50 2005  Simon McQueen  <sm@prismtech.com>

        * tao/Makefile.am:

          Removed WrongTransactionS.inl - file no longer in CVS.

Thu Sep 29 09:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>
